[gd_scene load_steps=10 format=2]

[ext_resource path="res://Nivell 3/3 Objects/Catch/6.png" type="Texture" id=2]
[ext_resource path="res://Tauro.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6106, 9.09977 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 54, 22 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 54, 0, 54, 22 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 27.2162, 8.9905 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.57317, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3.93811, 10 )

[node name="Enemic" type="Node2D"]

[node name="Tauro" type="KinematicBody2D" parent="."]
position = Vector2( 58.211, -1.2263 )
scale = Vector2( 10, 10 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tauro"]
position = Vector2( 0.0280617, 0.210461 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Tauro"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Hitbox" type="Area2D" parent="Tauro"]
scale = Vector2( 0.1, 0.1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tauro/Hitbox"]
position = Vector2( 1.29783, 2.12372 )
shape = SubResource( 5 )

[node name="Zona1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zona1"]
position = Vector2( -210.818, -0.733018 )
shape = SubResource( 6 )

[node name="Zona2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Zona2"]
position = Vector2( 91.3072, 0.914788 )
shape = SubResource( 7 )
[connection signal="area_entered" from="Tauro/Hitbox" to="Tauro" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Tauro/Hitbox" to="Tauro" method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Zona1" to="Tauro" method="_on_Zona1_body_entered"]
[connection signal="body_entered" from="Zona2" to="Tauro" method="_on_Zona2_body_entered"]
